# RGB-tri

./: CMakeLists.txt  CMakeSettings.json  Fd.nii  Fd32.nii  Ff.nii  Ff32.nii  Fi32.nii  LICENSE.txt  README.md  RGBtri.cpp  RGBtri.h
test-data/: Fi.nii  output-RGB.nii
ubuntu-binary/: RGBtri  readme.txt
